--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -10,7 +10,7 @@
 {% block relbar1 %}
 
 <div style="background-color: white; text-align: left; padding: 10px 10px 15px 15px">
-<a href="{{ pathto('index') }}"><h1 style="font-size: 2em;">Duke Linear Boltzmann Model for Heavy Quarks</h1></a>
+<a href="{{ pathto('index') }}"><h1 style="font-size: 2em;">Duke Heavy Quark Transport Project</h1></a>
 </div>
 {{ super() }}
 {% endblock %}
